# django-extend-fields

./: .env.example  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/: tests.yml
.github/workflows/: tests.yml
extends/: __init__.py  bases.py  exceptions.py  manager_builder.py  test.py  validators.py
extends/fields/: __init__.py  translated_field.py
extends/opportunity/: __init__.py  bases.py  exceptions.py  language_detector.py  translators.py
testapp/: manage.py
testapp/core/: asgi.py  settings.py  urls.py  wsgi.py
testapp/testapp/: models.py
testapp/testapp/migrations/: 0001_initial.py
testapp/testapp/tests/translated_field_tests/: conftest.py  factories.py  test_descriptor.py  test_orm.py
