[tool.poetry]
name = "django-extend-fields"
version = "0.1.0"
description = "Extend fields for django models"
authors = ["zaritskiyaa <zaritskiyaa@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
colorama = "^0.4.6"
pydantic = "^2.9.2"
deepl = "^1.19.1"
boto3 = "^1.35.37"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest-django = "^4.9.0"
factory-boy = "^3.3.1"
django-environ = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
